# docking_module

./: .rosinstall  Dockerfile  README.md  install.sh
aruco_detector_ocv/: CMakeLists.txt  package.xml
aruco_detector_ocv/launch/: detector.launch
aruco_detector_ocv/src/: aruco_detector_ocv.cpp
docking_gazebo/: CMakeLists.txt  package.xml
docking_gazebo/launch/: realworld.launch  simul.launch
docking_gazebo/rviz/: robot.rviz  robot_rit.rviz
docking_module/: CMakeLists.txt  package.xml
docking_out_module/: CMakeLists.txt  package.xml
docking_out_module/launch/: docking_out.launch
docking_out_module/scripts/: docking_out.py
docking_planner/: CMakeLists.txt  package.xml  setup.py
docking_planner/launch/: generate_path.launch
docking_planner/src/: planner.py  transform.py
docking_teleop_key/: CMakeLists.txt  package.xml
docking_teleop_key/launch/: teleop.launch
docking_teleop_key/scripts/: teleop.py
docking_tracker/: CMakeLists.txt  package.xml
docking_tracker/include/cppad/ipopt/: solve_callback.hpp
docking_tracker/include/docking_tracker/nmpc_ros/: mpc_planner_ros.h
docking_tracker/launch/: path_gen.launch  path_tracking.launch
docking_tracker/scripts/: path_generator.py
docking_tracker/src/nmpc_ros/: mpc_planner.cpp  mpc_planner_node.cpp  mpc_planner_ros.cpp  trajectory.cpp
marker_detecting/: CMakeLists.txt  no_roof_small_warehouse.world  package.xml
marker_detecting/launch/: detecting_marker.launch
marker_detecting/script/: detecting_marker.py  marker_kf.py
marker_detecting/world/: no_roof_small_warehouse.world
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
